--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 .yemei {
-    height: 25px;
+    height: 40px;
     color: #b0b0b0;
     background: #333;
-    font-size: 15px;
+    font-size: 10px;
     float：left;
     margin-right: auto;
     margin-left: auto;
+    line-height:40px;
   }
   
  
@@ -15,5 +16,13 @@
   }
 
   .yemeiright{
-      float:right;
+    position: absolute;
+    right:200px;
+    top:8px;
+    
+
+  }
+  .logo{
+    margin-top:5px;
+    top:60px;
   }
