--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 .yemei {
-    height: 40px;
+  
+  height: 40px;
     color: #b0b0b0;
     background: #333;
     font-size: 10px;
@@ -19,11 +20,14 @@
     display:inline-block;
     margin-left: 600px;
   }
-  .shopping-car{
-    display:inline-block;
-    margin-left: 1225px;
-  }
+
+
   .logo{
     margin-top:5px;
     top:60px;
+  }
+  .car{
+    line-height:40px;
+    display:inline-block;
+    
   }
