--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body{
+  background-color: white;
+  margin: 0px auto;
+}
 .yemei {
   
   height: 40px;
@@ -8,6 +12,7 @@
     margin-right: auto;
     margin-left: auto;
     line-height:40px;
+    font-size: 12px;
   }
   
  
@@ -17,17 +22,33 @@
   }
 
   .yemeiright{
+    float: right;
     display:inline-block;
-    margin-left: 600px;
+
   }
 
 
   .logo{
     margin-top:5px;
     top:60px;
+    margin-left:100px;
   }
   .car{
     line-height:40px;
+    float:right;
     display:inline-block;
-    
+    margin-top:5px;
   }
+.left{
+  float：left;
+  display:inline-block;
+  height: 40px;
+  color: #b0b0b0;
+  background: #333;
+  font-size: 10px;
+  margin: auto 0px auto 100px; 
+  line-height:40px;
+}
+.yemeiright{
+  margin: auto 100px; auto 900px;
+}
