--- a/index.css
+++ b/index.css
@@ -28,42 +28,44 @@ body{
   }
 
 
-  .logo{
-    margin-top:5px;
-    top:60px;
-    margin-left:100px;
-    display:inline-block;
-  }
+
   .car{
     line-height:40px;
     float:right;
     display:inline-block;
     margin-top:5px;
   }
-.left{
-  float：left;
-  display:inline-block;
-  height: 40px;
-  color: #b0b0b0;
-  background: #333;
-  font-size: 10px;
-  margin: auto 0px auto 100px; 
-  line-height:40px;
-}
+  .left{
+    float：left;
+    display:inline-block;
+    height: 40px;
+    color: #b0b0b0;
+    background: #333;
+    font-size: 10px;
+    margin: auto 0px auto 100px; 
+    line-height:40px;
+  }
 .yemeiright{
   margin: auto 100px; auto 900px;
 }
 
-.text{
-  padding: 26px 10px 38px;
-  color:#333;
-  font-size:15px;
+.logo{
   display:inline-block;
+  margin-top:10px;
+  margin-left:100px;
+  float:left;
+  
 }
-
+.text{
+  display:inline-block;
+  height:80px;
+  line-height:80px;
+  margin-left:26px;
+  color: #333;
+  font-size:16px;
+}
 .daohang{
   display:inline-block;
   margin-left:100px;
-  
-  
+  float:left;
 }
