--- a/index.css
+++ b/index.css
@@ -3,16 +3,14 @@ body{
   margin: 0px auto;
 }
 .yemei {
-  
   height: 40px;
     color: #b0b0b0;
     background: #333;
     font-size: 10px;
-    float：left;
     margin-right: auto;
     margin-left: auto;
     line-height:40px;
-    font-size: 12px;
+    font-size: 10px;
   }
   
  
@@ -22,9 +20,9 @@ body{
   }
 
   .yemeiright{
-    float: right;
     display:inline-block;
-
+    float:right;
+    margin-right:60px;
   }
 
 
@@ -42,17 +40,15 @@ body{
     color: #b0b0b0;
     background: #333;
     font-size: 10px;
-    margin: auto 0px auto 100px; 
+    margin-left:60px;
     line-height:40px;
   }
-.yemeiright{
-  margin: auto 100px; auto 900px;
-}
+
 
 .logo{
   display:inline-block;
   margin-top:10px;
-  margin-left:100px;
+  margin-left:60px;
   float:left;
   
 }
@@ -60,12 +56,76 @@ body{
   display:inline-block;
   height:80px;
   line-height:80px;
-  margin-left:26px;
+  margin-left:20px;
   color: #333;
   font-size:16px;
 }
 .daohang{
   display:inline-block;
-  margin-left:100px;
+ 
+  position: relative;
   float:left;
+  left:50px;
+}
+
+.header-search input[type="text"]{
+  height: 44px;
+  width: 243px;
+  border: 1px solid #e0e0e0;
+  margin-right: -1px;
+}
+.header-search input[type="text"]:hover{
+  border: 1px solid #b0b0b0;
+}
+.header-search input[type="text"]:focus{
+  outline:none;
+}
+.hot-words{
+  font-size: 12px;
+  position: absolute;
+  right: 40px;}
+.hot-words a{
+  background-color: #eee;
+  color: #757575;
+  padding: 3px 6px;
+  position: relative;
+  top: 2px;
+  right: 16px;
+}
+.hot-words a:hover{
+  background-color: rgba(255,103,0,0.98);
+  color: white;
+}
+.header-search input[type="submit"]{
+  height: 45px; width: 45px;
+  background: url("photos/sousuo.JPG") no-repeat 3px 6px;
+  border: 1px solid #e0e0e0;
+  position: relative;
+  top: 17px;
+  cursor: pointer;
+  left: -5px;
+}
+.header-search{
+  position: relative;
+  left:255px;
+}
+ ul>li{
+    list-style: none;
+}
+
+.zuobianlan{
+position: absolute;
+top:120px;
+left:35px;
+z-index:21;
+width:235px;
+height:460px;
+font-size:14px;
+background: #424242;
+margin-left: 25px;
+
+}
+.mijia{
+  display:inline-block;
+  margin-left:285px;
 }
