--- a/index.css
+++ b/index.css
@@ -1,14 +1,22 @@
 body{
   background-color: white;
   margin: 0px auto;
+ 
 }
+.all{
+  background: #333;
+  height: 40px;
+}
+
+
 .yemei {
+  width:1226px;
   height: 40px;
     color: #b0b0b0;
     background: #333;
     font-size: 10px;
-    margin-right: auto;
-    margin-left: auto;
+    margin-right:0px auto;
+    margin-left:0px auto;
     line-height:40px;
     font-size: 10px;
   }
@@ -20,9 +28,10 @@ body{
   }
 
   .yemeiright{
-    display:inline-block;
+    display:block;
+    margin-right:0px;
     float:right;
-    margin-right:60px;
+    
   }
 
 
@@ -40,7 +49,7 @@ body{
     color: #b0b0b0;
     background: #333;
     font-size: 10px;
-    margin-left:60px;
+    margin-left:100px;
     line-height:40px;
   }
 
@@ -48,7 +57,7 @@ body{
 .logo{
   display:inline-block;
   margin-top:10px;
-  margin-left:60px;
+  margin-left:100px;
   float:left;
   
 }
@@ -62,11 +71,16 @@ body{
 }
 .daohang{
   display:inline-block;
- 
   position: relative;
   float:left;
   left:50px;
 }
+
+
+
+
+
+
 
 .header-search input[type="text"]{
   height: 44px;
@@ -96,36 +110,52 @@ body{
   background-color: rgba(255,103,0,0.98);
   color: white;
 }
-.header-search input[type="submit"]{
-  height: 45px; width: 45px;
-  background: url("photos/sousuo.JPG") no-repeat 3px 6px;
-  border: 1px solid #e0e0e0;
-  position: relative;
-  top: 17px;
-  cursor: pointer;
-  left: -5px;
-}
+
 .header-search{
   position: relative;
-  left:255px;
-}
- ul>li{
-    list-style: none;
+  left:170px;
+  top:10px;
 }
 
+
+
+
+
+
+ul li{
+  list-style: none;
+  color: #fff;
+  margin-left: 10px;
+  line-height: 45px;
+  }
+
 .zuobianlan{
-position: absolute;
-top:120px;
-left:35px;
-z-index:21;
-width:235px;
-height:460px;
-font-size:14px;
-background: #424242;
-margin-left: 25px;
+  
+    position: absolute;
+    top: 120px;
+    left: 60px;
+    z-index: 21;
+    width: 234px;
+    height: 460px;
+    font-size: 14px;
+    background: rgba(0,0,0,0.6);
+  
 
 }
 .mijia{
   display:inline-block;
   margin-left:285px;
 }
+
+
+
+
+
+
+
+
+.zuobianlan2-1{
+  margin-left:50px;
+}
+
+
