--- a/index.css
+++ b/index.css
@@ -1,24 +1,27 @@
 body{
-  background-color: white;
-  margin: 0px auto;
- 
+  font: 14px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
 }
 .all{
-  background: #333;
-  height: 40px;
+    position: relative;
+    z-index: 30;
+    height: 40px;
+    font-size: 12px;
+    color: #b0b0b0;
+    background: #333;
+    margin: 0px auto;
 }
-
 
 .yemei {
   width:1226px;
   height: 40px;
-    color: #b0b0b0;
-    background: #333;
-    font-size: 10px;
-    margin-right:0px auto;
-    margin-left:0px auto;
-    line-height:40px;
-    font-size: 10px;
+  color: #b0b0b0;
+  background: #333;
+  font-size: 12px;
+  line-height:40px;
+  margin: 0px auto;
   }
   
  
@@ -28,14 +31,9 @@ body{
   }
 
   .yemeiright{
-    display:block;
-    margin-right:0px;
-    float:right;
-    
+    float: right;
+    display: inline-block;
   }
-
-
-
   .car{
     line-height:40px;
     float:right;
@@ -43,83 +41,45 @@ body{
     margin-top:5px;
   }
   .left{
-    float：left;
+    float: left;
     display:inline-block;
     height: 40px;
     color: #b0b0b0;
     background: #333;
-    font-size: 10px;
-    margin-left:100px;
+    font-size: 12px;
+    margin-left:0px;
     line-height:40px;
   }
+  .second-line{
+    width: 1226px;
+    height:80px;
+    margin:0px auto;
+  }
 
-
-.logo{
-  display:inline-block;
-  margin-top:10px;
-  margin-left:100px;
-  float:left;
-  
-}
-.text{
+  .logo{
+    display:inline-block;
+    margin-top:10px;
+    margin-left:0px;
+    float:left;
+  }
+  .text{
   display:inline-block;
   height:80px;
   line-height:80px;
   margin-left:20px;
   color: #333;
   font-size:16px;
-}
-.daohang{
+  }
+  .daohang{
   display:inline-block;
-  position: relative;
   float:left;
-  left:50px;
-}
-
-
-
-
-
-
-
-.header-search input[type="text"]{
-  height: 44px;
-  width: 243px;
-  border: 1px solid #e0e0e0;
-  margin-right: -1px;
-}
-.header-search input[type="text"]:hover{
-  border: 1px solid #b0b0b0;
-}
-.header-search input[type="text"]:focus{
-  outline:none;
-}
-.hot-words{
-  font-size: 12px;
-  position: absolute;
-  right: 40px;}
-.hot-words a{
-  background-color: #eee;
-  color: #757575;
-  padding: 3px 6px;
-  position: relative;
-  top: 2px;
-  right: 16px;
-}
-.hot-words a:hover{
-  background-color: rgba(255,103,0,0.98);
-  color: white;
-}
-
-.header-search{
-  position: relative;
-  left:170px;
-  top:10px;
-}
-
-
-
-
+  margin-left:160px;
+  }
+  .third-line{
+    width:1226px;
+    margin:0px auto;
+    height:460px;
+  }
 
 
 ul li{
@@ -128,23 +88,70 @@ ul li{
   margin-left: 10px;
   line-height: 45px;
   }
+  .zuobianlan-all{
+    width:1226px;
+    margin:0px auto;
+  }
 
 .zuobianlan{
-  
-    position: absolute;
-    top: 120px;
-    left: 60px;
-    z-index: 21;
-    width: 234px;
-    height: 460px;
-    font-size: 14px;
-    background: rgba(0,0,0,0.6);
-  
-
-}
-.mijia{
+  float:left;
   display:inline-block;
-  margin-left:285px;
+  height: 460px;
+  width:234px;
+  border: 0;
+  color: #fff;
+  background: #333;
+  background: rgba(0,0,0,0.6);
+  
+
+}
+.miaoshari{
+  float:right;
+  display:inline-block;
+  
+}
+
+.SearchBox {
+  display:inline-block;
+  margin-top:10px;
+  margin-right:0px;
+  z-index: 1;
+  width: 223px;
+  height: 48px;
+  padding: 0 10px;
+  border: 1px solid #e0e0e0;
+  font-size: 14px;
+  line-height: 48px;
+  outline: 0;
+  float: right;
+}
+
+.six li{
+  float:left;
+  padding:0 3px;
+  
+  height:82px;
+  font-size:14px;
+}
+.fourth-line{
+  width:1226px;
+  margin:0px auto;
+}
+.six ul{
+  margin: 0;
+    padding:3px;
+    list-style-type: none;
+    font-size: 12px;
+    text-align: center;
+    background-color: #5f5750;
+    float:left;
+}
+.six{
+  width:234px;
+  margin-top:10px;
+}
+.p123{
+  margin-left:13px;
 }
 
 
@@ -154,8 +161,12 @@ ul li{
 
 
 
-.zuobianlan2-1{
-  margin-left:50px;
-}
+
+
+
+
+
+
+
 
 
